--- a/cs-sprint2/src/prototype/login/login.html
+++ b/cs-sprint2/src/prototype/login/login.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <script src="../../../../../../AppData/Local/Temp/jquery.min.js"></script>
-</head>
-<body>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Title</title>-->
+<!--    <script src="../../../../../../AppData/Local/Temp/jquery.min.js"></script>-->
+<!--</head>-->
+<!--<body>-->
 
-</body>
-</html>
+<!--</body>-->
+<!--</html>-->
